--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,60 @@
-.terraform/
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
 *.tfstate
-*.tfstate.backup
+*.tfstate.*
+
+# Crash log files
+crash.log
+crash.*.log
+
+# Exclude all .tfvars files, which are likely to contain sensitive data
+*.tfvars
+*.tfvars.json
+
+# Ignore override files as they are usually used to override resources locally
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+*tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Ignore Mac system files
+.DS_Store
+
+# Ignore IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Ignore log files
+*.log
+
+# Ignore AWS credentials
+*.pem
+*.key
+.aws/
+```
+
+---
+
+## 💡 BU DOSYA NE YAPIYOR - ÇOK ÖNEMLİ! 🔒
+
+**.gitignore** = GitHub'a gitmemesi gereken dosyalar listesi!
+
+**Neden Kritik:**
+```
+❌ Terraform state files (hassas bilgiler içerir!)
+❌ .tfvars files (AWS secrets olabilir!)
+❌ AWS credentials (.pem, .key)
+❌ Local Terraform cache
+❌ IDE dosyaları
